tests/compile-fail/Rule_5_5.rs
macro_rules! val {
    () => {
        3;
    };
}

fn main() {
    let val: i16 = 1;
    let _ = val;
    let _ = val!();
}
